--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,13 @@
 {
   "version": "0.0.1",
-  "name": "楽天から PR 商品を消す",
-  "description": "楽天市場の検索結果から PR 商品（広告商品）を除外する",
+  "name": "楽天の PR 商品を非表示にする",
+  "description": "楽天市場の検索結果から PR 商品（広告商品）を消します。",
   "manifest_version": 3,
   "default_locale": "ja",
+  "action": {
+    "default_icon": "images/icon38.png",
+    "default_popup": "popup.html"
+  },
   "icons": {
     "16": "images/icon16.png",
     "32": "images/icon32.png",
