--- a/package.json
+++ b/package.json
@@ -20,8 +20,6 @@
     "@crxjs/vite-plugin": "^1.0.14",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.2",
-    "vite": "^4.4.5",
-    "vitest": "^0.34.2",
     "stylelint": "^15.9.0",
     "stylelint-config-prettier": "^9.0.5",
     "stylelint-config-recess-order": "^4.3.0",
@@ -29,7 +27,13 @@
     "stylelint-config-standard": "^33.0.0",
     "stylelint-csstree-validator": "^2.0.0",
     "stylelint-declaration-block-no-ignored-properties": "^2.7.0",
-    "stylelint-value-no-unknown-custom-properties": "^4.0.0"
+    "stylelint-value-no-unknown-custom-properties": "^4.0.0",
+    "vite": "^4.4.5",
+    "vitest": "^0.34.2"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "bootstrap": "^5.3.1",
+    "browser-extension-utils": "github:Cside/browser-extension-utils"
+  }
 }
