--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "bootstrap": "^5.3.1",
-    "browser-extension-utils": "github:Cside/browser-extension-utils"
+    "@cside/browser-extension-utils": "^0.0.6",
+    "bootstrap": "^5.3.1"
   }
 }
