--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "lint-fix:stylelint": "stylelint --fix './src/**/*.css'",
     "lint": "run-p -c lint:*",
     "lint-fix": "run-p -c lint-fix:*",
+    "check:types": "tsc --noEmit",
     "check:ng-word": "./scripts/check-ng-words.sh",
+    "check:unused-exports": "ts-prune -e",
     "check": "run-p -c lint check:*"
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "^1.0.14",
+    "@tsconfig/strictest": "^2.0.2",
+    "@types/chrome": "^0.0.246",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.2",
     "stylelint": "^15.9.0",
@@ -28,6 +32,8 @@
     "stylelint-csstree-validator": "^2.0.0",
     "stylelint-declaration-block-no-ignored-properties": "^2.7.0",
     "stylelint-value-no-unknown-custom-properties": "^4.0.0",
+    "ts-prune": "^0.10.3",
+    "typescript": "^5.2.2",
     "vite": "^4.4.5",
     "vitest": "^0.34.2"
   },
