--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "package:firefox": "./scripts/package-firefox.sh",
     "lint:prettier": "prettier --check .",
     "lint-fix:prettier": "prettier --write .",
+    "lint:eslint": "eslint './src/**/*.ts'",
+    "lint-fix:eslint": "eslint --fix './src/**/*.ts'",
     "lint:stylelint": "stylelint './src/**/*.css'",
     "lint-fix:stylelint": "stylelint --fix './src/**/*.css'",
     "lint": "run-p -c lint:*",
@@ -21,6 +23,10 @@
     "@crxjs/vite-plugin": "^1.0.14",
     "@tsconfig/strictest": "^2.0.2",
     "@types/chrome": "^0.0.246",
+    "@typescript-eslint/eslint-plugin": "^6.7.2",
+    "@typescript-eslint/parser": "^6.7.2",
+    "eslint": "^8.49.0",
+    "eslint-config-prettier": "^9.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.2",
     "stylelint": "^15.9.0",
