--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
     {
       "matches": ["https://search.rakuten.co.jp/search/mall/*"],
       "js": ["src/contentScript.ts"],
-      "run_at": "document_start"
+      "run_at": "document_end"
     }
   ]
 }
