--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "lint-fix": "run-p -c lint-fix:*",
     "check:types": "tsc --noEmit",
     "check:ng-word": "./scripts/check-ng-words.sh",
-    "check": "run-p -c lint check:*"
+    "check-all": "run-p -c lint check:*"
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "^1.0.14",
