--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,7 +50,7 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{ secrets.WRITABLE_TOKEN }}
 
-      - run: pnpm run check
+      - run: pnpm run check-all
 
       - uses: 8398a7/action-slack@v3
         with:
